// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFieldBase does not render the label if showLabel is false 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  />
</div>
`;

exports[`ReactFieldBase renders the FieldBase with contentRenderer 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div>
      <h1>
        Foo bar
      </h1>
    </div>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with help text 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <span
      class="form-text"
      id="undefined_fieldTip"
    >
      Type something!
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with id 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  />
</div>
`;

exports[`ReactFieldBase renders the FieldBase with label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldLabelHidden"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      Text
    </label>
    <span
      class="sr-only"
      id="undefined_fieldLabelHidden"
    >
      Text
    </span>
  </div>
</div>
`;

exports[`ReactFieldBase renders the FieldBase with required 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldLabelHidden undefined_fieldRequired"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      <span
        class="reference-mark"
      >
        <svg
          class="lexicon-icon lexicon-icon-asterisk"
          role="presentation"
        >
          <use
            xlink:href="#asterisk"
          />
        </svg>
      </span>
      <span
        class="sr-only"
        id="undefined_fieldRequired"
      >
        required
      </span>
    </label>
    <span
      class="sr-only"
      id="undefined_fieldLabelHidden"
    />
  </div>
</div>
`;

exports[`ReactFieldBase renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  />
</div>
`;
